<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.surajgoel.musicsync.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_devices"
        android:name="com.surajgoel.musicsync.ui.devices.DevicesFragment"
        android:label="@string/menu_devices"
        tools:layout="@layout/fragment_devices" />

    <fragment
        android:id="@+id/nav_debug"
        android:name="com.surajgoel.musicsync.ui.debug.DebugFragment"
        android:label="@string/menu_debug"
        tools:layout="@layout/fragment_debug" />
</navigation>