<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.debug.DebugFragment" >


    <com.surajgoel.musicsync.ui.debug.DebugView
        android:id="@+id/debug_view"
        android:layout_width="400dp"
        android:layout_height="251dp"
        android:background="#E6E5E5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01999998" />

    <TextView
        android:id="@+id/fullSpectrumLen_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/full_spectrum_length"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/fullSpectrumLen"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/fullSpectrumLen"
        android:layout_width="67dp"
        android:layout_height="46dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/updateButton"
        app:layout_constraintStart_toEndOf="@+id/fullSpectrumLen_text"
        app:layout_constraintTop_toBottomOf="@+id/debug_view" />


    <TextView
        android:id="@+id/viewableSpectrumLen_text"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginBottom="10dp"
        android:text="@string/viewable_spectrum_length"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/viewableSpectrumMin"
        app:layout_constraintStart_toStartOf="@+id/fullSpectrumLen_text" />


    <EditText
        android:id="@+id/viewableSpectrumMin"
        android:layout_width="67dp"
        android:layout_height="46dp"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="2dp"
        android:ems="10"
        android:hint="min"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/viewableSpectrumLen_text"
        app:layout_constraintTop_toBottomOf="@+id/fullSpectrumLen_text" />

    <EditText
        android:id="@+id/viewableSpectrumMax"
        android:layout_width="67dp"
        android:layout_height="46dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:ems="10"
        android:hint="max"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/viewableSpectrumMin"
        app:layout_constraintStart_toEndOf="@+id/viewableSpectrumMin" />




    <EditText
        android:id="@+id/bassIdxmin"
        android:layout_width="67dp"
        android:layout_height="46dp"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="2dp"
        android:ems="10"
        android:hint="min"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/bassIdx_text"
        app:layout_constraintTop_toBottomOf="@+id/viewableSpectrumLen_text" />
    <TextView
        android:id="@+id/bassIdx_text"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginBottom="10dp"
        android:text="@string/bass_idx"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/bassIdxmin"
        app:layout_constraintStart_toStartOf="@+id/viewableSpectrumLen_text" />

    <EditText
        android:id="@+id/bassIdxmax"
        android:layout_width="67dp"
        android:layout_height="46dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:ems="10"
        android:hint="max"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/bassIdxmin"
        app:layout_constraintStart_toEndOf="@+id/bassIdxmin" />



    <EditText
        android:id="@+id/midIdxmin"
        android:layout_width="67dp"
        android:layout_height="46dp"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="2dp"
        android:ems="10"
        android:hint="min"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/midIdx_text"
        app:layout_constraintTop_toBottomOf="@+id/bassIdx_text" />
    <TextView
        android:id="@+id/midIdx_text"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginBottom="10dp"
        android:text="@string/mid_idx"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/midIdxmin"
        app:layout_constraintStart_toStartOf="@+id/bassIdx_text" />

    <EditText
        android:id="@+id/midIdxMax"
        android:layout_width="67dp"
        android:layout_height="46dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:ems="10"
        android:hint="max"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/midIdxmin"
        app:layout_constraintStart_toEndOf="@+id/midIdxmin" />


    <EditText
        android:id="@+id/trebelIdxMin"
        android:layout_width="67dp"
        android:layout_height="46dp"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="2dp"
        android:ems="10"
        android:hint="min"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/trebelIdx_text"
        app:layout_constraintTop_toBottomOf="@+id/midIdx_text" />
    <TextView
        android:id="@+id/trebelIdx_text"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginBottom="10dp"
        android:text="@string/trebel_idx"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/trebelIdxMin"
        app:layout_constraintStart_toStartOf="@+id/midIdx_text" />

    <EditText
        android:id="@+id/trebelIdxMax"
        android:layout_width="67dp"
        android:layout_height="46dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:ems="10"
        android:hint="max"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/trebelIdxMin"
        app:layout_constraintStart_toEndOf="@+id/trebelIdxMin" />





    <Button
        android:id="@+id/updateButton"
        android:layout_width="88dp"
        android:layout_height="49dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fullSpectrumLen" />

    <SeekBar
        android:id="@+id/bassMultiSeek"
        android:layout_width="130dp"
        android:layout_height="32dp"
        android:layout_marginTop="20dp"
        android:max="100"
        android:progress="100"
        app:layout_constraintStart_toStartOf="@+id/trebelIdx_text"
        app:layout_constraintTop_toBottomOf="@+id/trebelIdx_text" />

    <SeekBar
        android:id="@+id/midMultiSeek"
        android:layout_width="130dp"
        android:layout_height="32dp"
        android:layout_marginTop="20dp"
        android:max="100"
        android:progress="100"
        app:layout_constraintEnd_toStartOf="@+id/trebelMultiSeek"
        app:layout_constraintStart_toEndOf="@+id/bassMultiSeek"
        app:layout_constraintTop_toBottomOf="@+id/trebelIdx_text" />

    <SeekBar
        android:id="@+id/trebelMultiSeek"
        android:layout_width="130dp"
        android:layout_height="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:max="100"
        android:progress="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trebelIdx_text" />

    <SeekBar
        android:id="@+id/overallMultiSeek"
        android:layout_width="300dp"
        android:layout_height="37dp"
        android:progress="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/midMultiText" />

    <SeekBar
        android:id="@+id/normPowerSeek"
        android:layout_width="300dp"
        android:layout_height="37dp"
        android:progress="50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/overallMultiText" />

    <TextView
        android:id="@+id/bassMultiText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bass"
        app:layout_constraintEnd_toEndOf="@+id/bassMultiSeek"
        app:layout_constraintStart_toStartOf="@+id/bassMultiSeek"
        app:layout_constraintTop_toBottomOf="@+id/bassMultiSeek" />

    <TextView
        android:id="@+id/midMultiText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mid"
        app:layout_constraintEnd_toEndOf="@+id/midMultiSeek"
        app:layout_constraintStart_toStartOf="@+id/midMultiSeek"
        app:layout_constraintTop_toBottomOf="@+id/bassMultiSeek" />

    <TextView
        android:id="@+id/trebelMultiText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Trebel"
        app:layout_constraintEnd_toEndOf="@+id/trebelMultiSeek"
        app:layout_constraintStart_toStartOf="@+id/trebelMultiSeek"
        app:layout_constraintTop_toBottomOf="@+id/bassMultiSeek" />

    <TextView
        android:id="@+id/overallMultiText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Overall Multipler"
        app:layout_constraintEnd_toEndOf="@+id/overallMultiSeek"
        app:layout_constraintStart_toStartOf="@+id/overallMultiSeek"
        app:layout_constraintTop_toBottomOf="@+id/overallMultiSeek" />

    <TextView
        android:id="@+id/normMultiText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Norm Power"
        app:layout_constraintEnd_toEndOf="@+id/overallMultiSeek"
        app:layout_constraintStart_toStartOf="@+id/overallMultiSeek"
        app:layout_constraintTop_toBottomOf="@+id/normPowerSeek" />

    <Switch
        android:id="@+id/rgbBarSwtich"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:checked="true"
        android:text="RGB Bars"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/normMultiText" />

    <Switch
        android:id="@+id/prevColorSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:checked="true"
        android:text="Preview Color"
        app:layout_constraintStart_toEndOf="@+id/rgbBarSwtich"
        app:layout_constraintTop_toBottomOf="@+id/normMultiText" />


</androidx.constraintlayout.widget.ConstraintLayout>